feat: register and list devices
